fix(ui/Toast): fix header alignment (#1151)

--- a/packages/ui/components/toast/index.styl
+++ b/packages/ui/components/toast/index.styl
@@ -29,6 +29,9 @@
   &.success
     border-top-color var(--color-border-success)
 
+.header
+  justify-content space-between
+
 .text
   margin-top 1u
 
